--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "scripts": {
     "dev": "nodemon src/index.js"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "add": "^2.0.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
+  }
 }
